# GF_translate

./: GF_translate.py  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
images/: readme.md
